--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "bson": "^4.7.2",
+    "bson-objectid": "^2.0.4",
     "fontsource-russo-one": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
